tests/baselines/reference/conditionalDoesntLeakUninstantiatedTypeParameter.errors.txt
conditionalDoesntLeakUninstantiatedTypeParameter.ts(7,7): error TS2322: Type 'string' is not assignable to type 'number'.


==== conditionalDoesntLeakUninstantiatedTypeParameter.ts (1 errors) ====
    interface Synthetic<A, B extends A> {}
    type SyntheticDestination<T, U> = U extends Synthetic<T, infer V> ? V : never;
    type TestSynthetic = // Resolved to T, should be `number` or an inference failure (`unknown`)
        SyntheticDestination<number, Synthetic<number, number>>;
    
    const y: TestSynthetic = 3; // Type '3' is not assignable to type 'T'. (shouldn't error)
    const z: TestSynthetic = '3'; // Type '"3""' is not assignable to type 'T'. (should not mention T)
          ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    